--- a/Project Interwar/localisation/countries_l_english.yml
+++ b/Project Interwar/localisation/countries_l_english.yml
@@ -139,18 +139,18 @@
  ENG_libertarian_socialism_DEF:0 "the Union of Britain"
  ENG_syndicalism:1 "Union of Britain"
  ENG_syndicalism_DEF:1 "the Union of Britain"
- ENG_progressivism:0 "United Kingdom of Great Britain and Ireland"
- ENG_progressivism_DEF:0 "the United Kingdom of Great Britain and Ireland"
- ENG_liberal_democracy:0 "United Kingdom of Great Britain and Ireland"
- ENG_liberal_democracy_DEF:0 "the United Kingdom of Great Britain and Ireland"
- ENG_conservative_democracy:0 "United Kingdom of Great Britain and Ireland"
- ENG_conservative_democracy_DEF:0 "the United Kingdom of Great Britain and Ireland"
- ENG_authoritarian_democracy:1 "United Kingdom of Great Britain and Ireland"
- ENG_authoritarian_democracy_DEF:1 "the United Kingdom of Great Britain and Ireland"
- ENG_despotism:0 "United Kingdom of Great Britain and Ireland"
- ENG_despotism_DEF:0 "the United Kingdom of Great Britain and Ireland"
- ENG_monarchism:0 "United Kingdom of Great Britain and Ireland"
- ENG_monarchism_DEF:0 "the United Kingdom of Great Britain and Ireland"
+ ENG_progressivism:0 "United Kingdom"
+ ENG_progressivism_DEF:0 "the United Kingdom"
+ ENG_liberal_democracy:0 "United Kingdom"
+ ENG_liberal_democracy_DEF:0 "the United Kingdom"
+ ENG_conservative_democracy:0 "United Kingdom"
+ ENG_conservative_democracy_DEF:0 "the United Kingdom"
+ ENG_authoritarian_democracy:1 "United Kingdom"
+ ENG_authoritarian_democracy_DEF:1 "the United Kingdom"
+ ENG_despotism:0 "United Kingdom"
+ ENG_despotism_DEF:0 "the United Kingdom"
+ ENG_monarchism:0 "United Kingdom"
+ ENG_monarchism_DEF:0 "the United Kingdom"
  ENG_fascism:0 "Empire of Britannia"
  ENG_fascism_DEF:0 "the Empire of Britannia"
  ENG_national_socialism:1 "Empire of Britannia"
