Added France and Germany and some tweaks to localization files.

--- a/Project Interwar/localisation/parties_l_english.yml
+++ b/Project Interwar/localisation/parties_l_english.yml
@@ -96,7 +96,7 @@
  CAN_authoritarian_democracy_party_long:0 "Canadian Armed Forces Military Junta"
  CAN_despotism_party:0 "CAF-MJ"
  CAN_despotism_party_long:0 "Canadian Armed Forces Military Junta"
- CAN_monarchism_party:0 "HoW"
+ CAN_monarchism_party:0 "House of Windsor"
  CAN_monarchism_party_long:0 "Loyalist House of Windsor"
  CAN_fascism_party:0 "CUF"
  CAN_fascism_party_long:0 "Canadian Union of Fascist"
@@ -106,6 +106,62 @@
  CAN_ultranationalism_party_long:0 "National Unity Party"
  CAN_anarchism_party:0 "Anarchism"
  CAN_anarchism_party_long:0 "General Anarchist Movements in Canada"
+ 
+ #France Political Parties
+ FRA_authoritarian_communism_party:0 "FCP"
+ FRA_authoritarian_communism_party_long:0 "Parti Communiste Français"
+ FRA_libertarian_socialism_party:0 "FSWI"
+ FRA_libertarian_socialism_party_long:0 "Section Française de l'Internationale Ouvrière"
+ FRA_syndicalism_party:0 "FSWI"
+ FRA_syndicalism_party_long:0 "Section Française de l'Internationale Ouvrière"
+ FRA_progressivism_party:0 "RSP"
+ FRA_progressivism_party_long:0 "Parti Républicain-Socialiste"
+ FRA_liberal_democracy_party:0 "RP"
+ FRA_liberal_democracy_party_long:0 "Parti Radical"
+ FRA_conservative_democracy_party:0 "DRA"
+ FRA_conservative_democracy_party_long:0 "Alliance Démocratique"
+ FRA_authoritarian_democracy_party:0 "FAF-MJ"
+ FRA_authoritarian_democracy_party_long:0 "French Armed Forces Military Junta"
+ FRA_despotism_party:0 "FAF-MJ"
+ FRA_despotism_party_long:0 "French Armed Forces Military Junta"
+ FRA_monarchism_party:0 "House of Bourbon"
+ FRA_monarchism_party_long:0 "Maison de Bourbon"
+ FRA_fascism_party:0 "FPP"
+ FRA_fascism_party_long:0 "Parti Populaire Français"
+ FRA_national_socialism_party:0 "FPP"
+ FRA_national_socialism_party_long:0 "Parti Populaire Français"
+ FRA_ultranationalism_party:0 "AGF"
+ FRA_ultranationalism_party_long:0 "Avant-Garde Français"
+ FRA_anarchism_party:0 "Anarchism"
+ FRA_anarchism_party_long:0 "Mouvements Anarchistes Généraux en France"
+ 
+ #German Political Parties
+ GER_authoritarian_communism_party:0 "SL"
+ GER_authoritarian_communism_party_long:0 "Spartakusbund"
+ GER_libertarian_socialism_party:0 "ISDPG"
+ GER_libertarian_socialism_party_long:0 "Unabhangige Sozialdemokratische Partei Deutschlands"
+ GER_syndicalism_party:0 "FAGTU"
+ GER_syndicalism_party_long:0 "Freie Vereinigung Deutscher Gewerkschaften"
+ GER_progressivism_party:0 "SPD"
+ GER_progressivism_party_long:0 "Sozialdemokratische Partei Deutschlands"
+ GER_liberal_democracy_party:0 "GDP"
+ GER_liberal_democracy_party_long:0 "Deutsche Demokratische Partei"
+ GER_conservative_democracy_party:0 "CP"
+ GER_conservative_democracy_party_long:0 "Deutsche Zentrumspartei"
+ GER_authoritarian_democracy_party:0 "GNPP"
+ GER_authoritarian_democracy_party_long:0 "Deutschnationale Volkspartei"
+ GER_despotism_party:0 "GNPP"
+ GER_despotism_party_long:0 "Deutschnationale Volkspartei"
+ GER_monarchism_party:0 "House of Hohenzollern"
+ GER_monarchism_party_long:0 "Haus Hohenzollern"
+ GER_fascism_party:0 "GNPP"
+ GER_fascism_party_long:0 "Deutschnationale Volkspartei"
+ GER_national_socialism_party:0 "GNPP"
+ GER_national_socialism_party_long:0 "Deutschnationale Volkspartei"
+ GER_ultranationalism_party:0 "Freikorps"
+ GER_ultranationalism_party_long:0 "Freikorps"
+ GER_anarchism_party:0 "Anarchism"
+ GER_anarchism_party_long:0 "Allgemeine Anarchistische Bewegungen in Deutschland"
  
  #Russian Red Army Political Parties
  RED_authoritarian_communism_party:0 "CPSU - Bolsheviks"
